# Obsidian_Agent

./: .env.example  .gitignore  ADDING_EXISTING_DOCS.md  AGENT-TASK-PLANNING-GUIDE.md  CLAUDE.md  COMPLETE-COMPONENT-TESTING-CHECKLIST.md  COMPLETION_SUMMARY.md  DEPLOYMENT-VALIDATION-STRATEGY.md  FOLDER-MANAGEMENT-ENHANCEMENT-PLAN.md  FULL-TEST-SUITE-OVERVIEW.md  IMPLEMENTATION-PLAN-TEMPLATE.md  MANUAL-TESTING-GUIDE.md  OBSIDIAN_WORKFLOW_GUIDE.md  PLANNING-IMPROVEMENTS.md  PLANNING.md  POST-DEPLOYMENT-VALIDATION-STRATEGY.md  PRE-DEPLOYMENT-VALIDATION-SUMMARY.md  README.md  RESEARCH_IMPLEMENTATION_README.md  SETUP_COMPLETE.md  TESTING-AND-VALIDATION-STRATEGY.md  blog_draft.md  blog_post_Neural_Network_part1_draft.md  blog_post_Neural_Network_part2_draft.md  coding-agent.md  coding-generic-agent-enhanced.md  coding-generic-agent.md.backup  how-to-choose-vector-database_all_drafts.html  how-to-choose-vector-database_voice_matched.html  linkedin_draft.md  linkedin_draft_voice_matched.md  linkedin_post_Neural_Network_part1_draft.md  linkedin_post_Neural_Network_part2_draft.md  neural-networks-part1-blog.md  neural-networks-part1-linkedin.md  neural-networks-part2-blog.md  neural-networks-part2-linkedin.md  pyproject.toml  requirements-research.txt  research-topic-help.md  (+3 more)
.claude/: settings.local.json
.claude/commands/: add-to-obsidian.md  ai-research-agent.md  coding-agent.md  coding-generic-agent.md  create-slash-command.md  customer-journey-tool-planning-summary.md  deploy.md  learn-planning.md  monitor.md  obsidian-archive.md  obsidian-save.md  pre-deployment.md  research-consolidator.md  research-generic-command.md  research-generic-consolidator.md  research-generic-documentation.md  research-generic.md  research-topic-command.md  research-topic-merged.md  research-topic.md  slash-creator.md  start-implementation.md  system-migration.md
.claude/requests/: coding-prompt.md
docs/: brave-api-configuration.md  obsidian-copilot-setup.md
plans/: platform-migration-analysis.md  web-search-tool.md
prompts/: prompt1.md  prompt2.md  prompt3.md  prompt4.md  prompt5.md
src/: main.py
tests/: conftest.py
(+131 files in other folders)
